# UrfuLab

./: CMakeLists.txt  Dockerfile  README.md  base_interface.cpp  monitor.h
client/: CMakeLists.txt  main.cpp  tcpclient.cpp  tcpclient.h
logger/: boost_logger.cpp
monitor/: base_interface.cpp  base_interface.h  main.cpp  monitor.h
server/: CMakeLists.txt  main.cpp  tcpserver.cpp  tcpserver.h
